fix swiper overflow: visible

--- a/client/src/components/swiper.css
+++ b/client/src/components/swiper.css
@@ -1,3 +1,6 @@
+.swiper {
+    overflow: visible;
+}
 @media (min-width: 768px) {
   .Row .swiper-wrapper:hover .swiper-slide {
     transform: translateX(-15%);
